@@ -1,3 +1,20 @@
 Test::Aggregate
 Test::Wrapper
 Test::FileReferenced
+Test::Bomb
+Test::DBIx::Class::Schema
+Test::FITesque
+Test::Flatten
+Test::More::Prefix
+Test::ParallelSubtest
+Test::Pretty
+Test::Spec
+Test::Builder:Clutch
+Test::Classy
+Test::Kit
+Test::Kwalitee
+Test::Modern
+Test::Module::Used
+Test::Moose
+Test::Moose::More
+Test::SharedFork
